--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="https://formsubmit.co/contato@phpmaranhao.com.br">
+			<form id="signup-form" method="post" action="https://formspree.io/f/mgvwgyyz">
 				<input type="email" name="email" id="email" placeholder="Endereço de e-mail" />
 				<input type="submit" value="Me avisa" />
+				<hidden name="message" value="Gostaria de ser avisado sobre o lançamento do site" />
 			</form>
 
 		<!-- Footer -->
