--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<form id="signup-form" method="post" action="https://formspree.io/f/mgvwgyyz">
 				<input type="email" name="email" id="email" placeholder="Endereço de e-mail" />
 				<input type="submit" value="Me avisa" />
-				<hidden name="message" value="Gostaria de ser avisado sobre o lançamento do site" />
+				<input type="hidden" name="message" value="Gostaria de ser avisado sobre o lançamento do site" />
 			</form>
 
 		<!-- Footer -->
